# tcc

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Críticas.md  Dockerfile  Plano.md  Tarefas.md  fly.toml  generate_system_prompt.py  norm_metadata.json  pyproject.toml
kube/: deployment.yaml  ingress.yaml  service.yaml
parsed_docs/: NT-01_2024_-_PROCEDIMENTOS_ADMINISTRATIVOS-ANEXO-A.md  NT-01_2024_-_PROCEDIMENTOS_ADMINISTRATIVOS-ANEXO-K.MD  NT-01_2024_-_PROCEDIMENTOS_ADMINISTRATIVOS.md  NT-02_2022_-_CONCEITOS_BASICOS_DE_SEGURANCA_CONTRA_INCENDIO-1.MD  NT-03_2024_-_TERMINOLOGIA_DE_SEGURANCA_CONTRA_INCENDIO.MD  NT-04-04_2014-SIMBOLOS-GRAFICOS.md  NT-05_2014-SEGURANCA-CONTRA-INCENDIO-URBANISTICA.MD  NT-06_2023_-_ACESSO_DE_VIATURAS_NA_EDIFICACAO.md  NT-07_2022_-_SEPARACAO_ENTRE_EDIFICACOES_ISOLAMENTO_DE_RISCO.MD  NT-08_2022_-_RESISTENCIA_AO_FOGO_DOS_ELEMENTOS_DE_CONSTRUCAO.MD  NT-09_2022_-_COMPARTIMENTACAO_HORIZONTAL_E_COMPARTIMENTACAO_VERTICAL_REV1.md  NT-10_2022_-_CONTROLE_DE_MATERIAIS_DE_ACABAMENTO_E_REVESTIMENTO.md  NT-11_2022_-_SAIDAS-DE-EMERGENCIA.MD  NT-12_2023_-_CENTROS_ESPORTIVOS_E_DE_EXIBICAO_V2.md  NT-13_2022_-_PRESSURIZACAO_DE_ESCADA_DE_SEGURANCA-V1.md  NT-14_2025_-_CARGA_DE_INCENDIO_NAS_EDIFICACOES_E_AREAS_DE_RISCO.md  NT-15-2023_-_CONTROLE_DE_FUMACA-P1.md  NT-15-2023_-_CONTROLE_DE_FUMACA-P2.md  NT-15-2023_-_CONTROLE_DE_FUMACA-P3.md  NT-15-2023_-_CONTROLE_DE_FUMACA-P4.MD  NT-15-2023_-_CONTROLE_DE_FUMACA-P5.MD  NT-15-2023_-_CONTROLE_DE_FUMACA-P6.md  NT-15-2023_-_CONTROLE_DE_FUMACA-P7.MD  NT-15-2023_-_CONTROLE_DE_FUMACA-P8.MD  (+77 more)
src/: app.py  auth.py  (+10 more)
(+2 files in other folders)
