[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.13.0",
    "langfuse>=2.60.4",
    "openai>=1.78.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "docling>=2.31.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"
python_functions = "test_*"
